<resources>
    <string name="intro_page_1">intro page 1</string>
    <string name="intro_page_2">intro page 2</string>
    <string name="intro_page_3">intro page 3</string>
    <string name="intro_page_4">intro page 4</string>
    <string name="enterMainButtonText">开始体验</string>
    <string name="about_title">关于雍美关爱</string>
    <string name="about_copyright">©2016 关爱科技 All Rights Reserved.</string>
    <string name="about_version">(版本号)</string>
    <string name="oum_logo">LOGO</string>
    <string name="user_name">账号</string>
    <string name="user_pwd">密码</string>
    <string name="user_reset">重填</string>
    <string name="user_login">登录</string>
    <string name="user_register">注册</string>
    <string name="user_forget_pwd">忘记密码</string>
    <string name="user_login_note">己注册用户请点下方按钮。</string>
    <string name="user_register_note">还未注册？请点下方按钮开始注册。</string>
    <string name="register_label_type">注册类型</string>
    <string name="userTypePerson">个人</string>
    <string name="userTypeEnterPrise">企业</string>
    <string name="userBirthday">生日</string>
    <string name="userSexLabel">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="nick_name">昵称</string>
    <string name="body_high">身高</string>
    <string name="body_high_hint">身高，以米为单位。如1.70。</string>
    <string name="user_register_label">亲，点击5秒注册会员。</string>
    <string name="app_name">雍美关爱</string>
    <string name="app_title">雍美关爱</string>
    <string name="action_settings">设置</string>
    <string name="button_arrow_back">返回</string>
    <string name="search_button">搜索</string>
    <string name="begin_date_label">开始时间</string>
    <string name="end_date_label">结束时间</string>
    <string name="pause">暂停</string>
    <string name="resume">继续</string>
    <string name="reset">重置</string>
    <string name="settings">设置</string>
    <string name="quit">退出</string>
    <string name="button_save">保存</string>
    <string name="period_day">日</string>
    <string name="period_week">周</string>
    <string name="period_month">月</string>
    <string name="period_year">年</string>
    <string name="drawer_open">显示菜单</string>
    <string name="drawer_close">隐藏菜单</string>
    <string name="share_wx">发送给朋友</string>
    <string name="share_py">分享到朋友圈</string>
    <string name="title_alert">提示</string>
    <string name="positiveButtonText">确定</string>
    <string name="negativeButtonText">取消</string>
    <string name="imgHome_description">Home image</string>
    <string name="image_scan_description">image scan</string>
    <string name="push_msg_description">push msg</string>
    <string name="push_msg_tip_point_description">push msg tip point</string>
    <string name="home_button_description">Home Button</string>
    <string name="home_button_yd">运动监测</string>
    <string name="home_button_xy">血压监测</string>
    <string name="home_button_tz">体重监测</string>
    <string name="home_button_xt">血糖监测</string>
    <string name="home_button_tw">体温监测</string>
    <string name="home_button_cp">健康商城</string>
    <string name="home_button_wd">一键报警</string>
    <string name="home_button_jt">健康讲堂</string>
    <string name="home_button_ls">历史数据</string>
    <string name="home_button_fx">血氧监测</string>
    <string name="home_button_jl">心电监测</string>
    <string name="home_button_jp">血脂监测</string>
    <string name="home_button_sd">参数设定</string>
    <string name="home_button_lt">尿液监测</string>
    <string name="left_menu_description">Left Menu</string>
    <string name="left_menu_item_description">Left Menu Item</string>
    <string name="menu_user_avatar">用户头像</string>
    <string name="menu_user_name">用户名称</string>
    <string name="menu_item_sport">运动</string>
    <string name="menu_item_history">历史</string>
    <string name="menu_item_discover">发现</string>
    <string name="menu_item_location">定位</string>
    <string name="menu_item_device">设备</string>
    <string name="location_me_title">我在这里</string>
    <string name="gps_level_label">GPS信号：</string>
    <string name="gps_level_value">弱</string>
    <string name="menu_item_message">消息</string>
    <string name="menu_item_friends">好友</string>
    <string name="menu_item_circle">圈子</string>
    <string name="menu_item_about">关于</string>
    <string name="ylistview_header_hint_normal">下拉刷新</string>
    <string name="ylistview_header_hint_ready">松开刷新数据</string>
    <string name="ylistview_header_hint_loading">正在加载。。。</string>
    <string name="ylistview_header_last_time">上次更新时间：</string>
    <string name="ylistview_footer_hint_normal">查看更多</string>
    <string name="ylistview_footer_hint_ready">松开载入更多</string>
    <string name="title_paired_devices">己配对的设备</string>
    <string name="title_found_devices">可用设备</string>
    <string name="button_scan">扫描</string>
    <string name="button_pair">配对</string>
    <string name="button_dis_pair">解除绑定</string>
    <string name="button_sync">同步</string>
    <string name="bt_select_device">请选择配对设备</string>
    <string name="bt_none_found">未发现可配对设备</string>
    <string name="button_start">启动</string>
    <string name="button_stop">停止</string>
    <string name="button_send">发送</string>
    <string name="button_cancel">取消</string>
    <string name="button_connect">连接</string>
    <string name="button_finish">完成</string>
    <string name="button_pause">暂停</string>
    <string name="button_resume">继续</string>
    <string name="button_reset">重置</string>
    <string name="button_setting">设置</string>
    <string name="button_search">搜索</string>
    <string name="button_del">删除</string>
    <string name="button_add">增加</string>
    <string name="label_not_pair">目前还未配对设备</string>
    <string name="label_not_found">未找到己配对设备</string>
    <string name="label_not_connect">目前还未连接设备</string>
    <string name="label_connected">设备己连接</string>
    <string name="label_paired">设备己配对</string>
    <string name="label_wait_data">正在等待获取数据</string>
    <string name="label_wait_order">准备就绪</string>
    <string name="label_cancel">己取消</string>
    <string name="label_stoped">己停止</string>
    <string name="label_device_name">设备</string>
    <string name="label_sync_progress">己完成 %1$s</string>
    <string name="xy_title">血压监测</string>
    <string name="xy_label">血压</string>
    <string name="xy_device_label">血压计</string>
    <string name="xy_zz">请坐下并保持安静，手心向上并对着心脏水平前方。</string>
    <string name="xy_measure_time">测量时间：</string>
    <string name="xy_measure_data_1">0</string>
    <string name="xy_measure_data_2">0</string>
    <string name="xy_measure_data_3">0</string>
    <string name="xy_measure_label_1">高压</string>
    <string name="xy_measure_label_2">低压</string>
    <string name="xy_measure_label_3">心率</string>
    <string name="xy_home_bar_jiance">监测</string>
    <string name="xy_home_bar_history">历史</string>
    <string name="xy_home_bar_faxian">发现</string>
    <string name="xy_home_bar_paimin">排名</string>
    <string name="xyHistoryTitle">血压历史数据</string>
    <string name="xyDiscoverTitle">好友数据</string>
    <string name="xyPaiminTitle">排名</string>
    <string name="xy_history_time">时间</string>
    <string name="xyMeasureResult">结论：未知。</string>
    <string name="xyTongji">统计图</string>
    <string name="xyDeviceListLabel">请选择您的血压计型号</string>
    <string name="xyDeviceUrion_bt">ABP-U80/60 BT</string>
    <string name="xyDeviceUrion_ble">ABP-U80/60 BLE</string>
    <string name="plus_history_left">上一条</string>
    <string name="plus_history_right">下一条</string>
    <string name="arrow_sub_left">sub</string>
    <string name="arrow_add_right">add</string>
    <string name="vertical_line">vertical line</string>
    <string name="horizontal_line">horizontal line</string>
    <string name="yd_pj_title">配件运动</string>
    <string name="yd_pj_sync_title">配件运动-同步模式</string>
    <string name="yd_pj_real_title">配件运动-实时计步</string>
    <string name="yd_pj_sync_label">同步模式</string>
    <string name="yd_pj_real_label">实时计步</string>
    <string name="yd_pj_sync_button">读取并保存历史数据</string>
    <string name="yd_pj_label">计步器</string>
    <string name="yd_gps_title">GPS运动</string>
    <string name="yd_setting_title">运动设置</string>
    <string name="yd_switch">运动切换</string>
    <string name="yd_main">运动</string>
    <string name="yd_history">历史</string>
    <string name="yd_discover">发现</string>
    <string name="yd_paimin">排名</string>
    <string name="yd_paimin_firends_only">朋友圈排名</string>
    <string name="yd_paimin_all">全部排名</string>
    <string name="yd_pj_yd">今日运动</string>
    <string name="yd_pj_sm">今日睡眠</string>
    <string name="yd_pj_switch_label">显示数据</string>
    <string name="ydDeviceListLabel">请选择您的计步器型号</string>
    <string name="ydDeviceAp">AP1708</string>
    <string name="ydDeviceAp2">AP2000</string>
    <string name="ydPJYdSum">0%</string>
    <string name="ydPJSmSum">--</string>
    <string name="ydHistoryTitle">运动历史数据</string>
    <string name="ydDiscoverTitle">好友数据</string>
    <string name="style_setting_title">手环设置</string>
    <string name="style_info_save">保存个人信息到手环</string>
    <string name="style_aim_save">保存运动目标到手环</string>
    <string name="style_syncTime_label">将手机当前时间设置到手环</string>
    <string name="style_syncTime">同步手环时间</string>
    <string name="chart_steps_label">步数</string>
    <string name="chart_distance_label">里程</string>
    <string name="chart_calories_label">卡路里</string>
    <string name="chart_sleep_label">睡眠</string>
    <string name="chart_finish_label">达成率</string>
    <string name="sync_status_label1">单日最高记录</string>
    <string name="sync_status_label2">本次完成</string>
    <string name="sync_status_label3">单日目标完成</string>
    <string name="sync_status_label4">千里之行 始于足下</string>
    <string name="sync_status_label5">0步</string>
    <string name="sync_status_label6">0%</string>
    <string name="pedometerTitle">计步</string>
    <string name="pedometerStepLabel">步数</string>
    <string name="pedometerStepValue">0</string>
    <string name="pedometerDistanceLabel">路程(千米)</string>
    <string name="pedometerDistanceValue">0</string>
    <string name="pedometerPaceLabel">步数/分钟</string>
    <string name="pedometerPaceValue">0</string>
    <string name="pedometerCaloriesLabel">千卡</string>
    <string name="pedometerCaloriesValue">0</string>
    <string name="pedometerSpeedLabel">千米/小时</string>
    <string name="pedometerSpeedValue">0</string>
    <string name="pedometerFinishLabel">达成率</string>
    <string name="pedometerFinishValue">0</string>
    <string name="pedometerTimeLabel">运动时间</string>
    <string name="pedometerTimeValue">0</string>
    <string name="pedometerStartButton">开始</string>
    <string name="pedometerStopButton">停止</string>
    <string name="pedometerStartState">开始</string>
    <string name="pedometerStopState">停止</string>
    <string name="notification_subtitle">运动</string>
    <string name="pedometerPreferenceTitle">计步设置</string>
    <string name="pedometerBodyWeightTitle">体重</string>
    <string name="pedometerBodyWeightLabel">体重(千克)</string>
    <string name="pedometerBodyWeightValue">60</string>
    <string name="pedometerBodyWeightDesc">设置体重，单位为千克</string>
    <string name="pedometerStepLengthTitle">步长</string>
    <string name="pedometerStepLengthLabel">步长(米)</string>
    <string name="pedometerStepLengthValue">0.55</string>
    <string name="pedometerStepLengthDesc">平均一步的长度，单位为米</string>
    <string name="pedometerSportTypeTitle">方式</string>
    <string name="pedometerSportTypeLabel">运动方式</string>
    <string name="pedometerSportTypeWalk">走路</string>
    <string name="pedometerSportTypeRun">跑步</string>
    <string name="pedometerSportTypeDesc">选择运动的方式，走路或跑步</string>
    <string name="pedometerSportAimTitle">目标</string>
    <string name="pedometerSportAimDesc">设定运动目标。单位是步</string>
    <string name="sleepDeepLabel">深睡</string>
    <string name="sleepDeepValue">0h0\'</string>
    <string name="sleepShallowLabel">浅睡</string>
    <string name="sleepShallowValue">0h0\'</string>
    <string name="sleepJitteryLabel">不安</string>
    <string name="sleepJitteryValue">0h0\'</string>
</resources>