<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/normal_bg_color"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/registerPanelLogo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/oum_logo"
        android:paddingTop="60dp"
        android:src="@mipmap/logo" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="#f8fcfd"
        android:gravity="center_vertical" >

        <ImageView
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/user_name"
            android:src="@mipmap/user_name" />

        <EditText
            android:id="@+id/register_user_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/user_name" >

            <requestFocus />
        </EditText>

        <ImageView
            android:id="@+id/resetRegisterUserName"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/user_reset"
            android:src="@drawable/cancel_button" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="#f8fcfd"
        android:gravity="center_vertical" >

        <ImageView
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/user_pwd"
            android:src="@mipmap/user_pwd" />

        <EditText
            android:id="@+id/register_user_pwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/user_pwd"
            android:inputType="textPassword" >
        </EditText>

        <ImageView
            android:id="@+id/resetRegisterUserPwd"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/user_reset"
            android:src="@drawable/cancel_button" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="#f8fcfd"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/register_type_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/register_label_type" />

        <RadioGroup
            android:id="@+id/userTypeGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/register_label_type"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/userTypePerson"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/userTypePerson" >
            </RadioButton>

            <RadioButton
                android:id="@+id/userTypeEnterPrise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userTypeEnterPrise" >
            </RadioButton>
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/register_user_register"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="#23ac38"
        android:text="@string/user_register"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/user_login_note"
        android:textSize="15sp" />

    <Button
        android:id="@+id/register_user_login"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/share_button_bg"
        android:text="@string/user_login"
        android:textColor="#000000" />

</LinearLayout>