<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/pjOperationBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/normal_margin"
        android:layout_marginRight="@dimen/normal_margin"
        android:layout_marginTop="@dimen/normal_margin"
        android:gravity="center_vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/yd_pj_title"
            android:src="@mipmap/yd_peijian" />

        <TextView
            android:id="@+id/ydPJName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_device_name" />

        <Button
            android:id="@+id/ydPJOperator"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="#58b334"
            android:text="@string/button_start"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/pjSetingButton"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:background="#58b334"
            android:enabled="false"
            android:text="@string/button_setting"
            android:textColor="#ffffff" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/normal_margin"
        android:layout_weight="1" >

        <LinearLayout
            android:id="@+id/finishRingLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sync_status_label1"
                    android:textColor="#f5bd00" />

                <TextView
                    android:id="@+id/sync_status_num1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/sync_status_label5"
                    android:textColor="#000000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sync_status_label2"
                    android:textColor="#aa3679" />

                <TextView
                    android:id="@+id/sync_status_num2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/sync_status_label5"
                    android:textColor="#000000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sync_status_label3"
                    android:textColor="#f5bd00" />

                <TextView
                    android:id="@+id/sync_status_num3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/sync_status_label6"
                    android:textSize="20sp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/sync_status_label4"
                android:textColor="#000000" />
        </LinearLayout>
    </FrameLayout>

    <Button
        android:id="@+id/ydSyncButton"
        android:layout_width="180dp"
        android:layout_height="35dp"
        android:background="@drawable/selected_sharp_bg"
        android:enabled="false"
        android:text="@string/yd_pj_sync_button"
        android:textColor="#ffffff" />

    <LinearLayout
        android:id="@+id/ydPJYdTotal2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="@dimen/normal_margin"
        android:layout_marginRight="@dimen/normal_margin"
        android:layout_marginTop="@dimen/normal_margin"
        android:gravity="center_vertical"
        android:visibility="visible" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/pedometerDistanceLabel"
                android:src="@mipmap/distance" />

            <TextView
                android:id="@+id/ydPJDistanceValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pedometerDistanceValue"
                android:textColor="#666666"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pedometerDistanceLabel"
                android:textColor="#999999"
                android:textSize="12sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:contentDescription="@string/vertical_line"
            android:scaleType="fitXY"
            android:src="@mipmap/home_vertical_line" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/pedometerStepLabel"
                android:src="@mipmap/step" />

            <TextView
                android:id="@+id/ydPJStepValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pedometerStepValue"
                android:textColor="#666666"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pedometerStepLabel"
                android:textColor="#999999"
                android:textSize="12sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:contentDescription="@string/vertical_line"
            android:scaleType="fitXY"
            android:src="@mipmap/home_vertical_line" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/pedometerCaloriesLabel"
                android:src="@mipmap/calories" />

            <TextView
                android:id="@+id/ydPJCaloriesValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pedometerCaloriesValue"
                android:textColor="#666666"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pedometerCaloriesLabel"
                android:textColor="#999999"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>